# chk_pixel

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.txt  README.md
data/: shift-jis.txt
src/: main.c
src/common/: CMakeLists.txt  arena.c  arena.h  bitmap.c  bitmap.h  colors.c  colors.h  common.c  common.h  file_io.c  file_io.h
src/common/math/: algebra.c  algebra.h  minmax.c  minmax.h  vec2.c  vec2.h  vec3.c  vec3.h  vec4.c  vec4.h
src/renderer/: CMakeLists.txt  cmd_list.c  cmd_list.h  renderer.c  renderer.h
src/soft/: CMakeLists.txt  soft.c  soft.h  soft_gl.c  soft_gl.h
src/texture/: CMakeLists.txt  tex.h  tex_loader.c  tex_loader.h
src/window/: CMakeLists.txt  window.c  window.h
